adicionando mais testes para a service de user